--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Active/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Active/FetchData.razor
@@ -21,11 +21,11 @@ else
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Operator Name</th>
-                <th>Description </th>
-                <th>Order Start</th>
-                <th>Order Info</th>
-                <th>Customer Name</th>
+                <th>Operatör</th>
+                <th>Arbetsbeskrivning </th>
+                <th>Arbete startar</th>
+                <th>Övrig information</th>
+                <th>Företagskund</th>
             </tr>
         </thead>
         <tbody>
