--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Edit.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Admin/Edit.razor
@@ -15,7 +15,7 @@
     async Task EditAdmin()
     {
         await http.PutAsJsonAsync("https://localhost:44374/api/admins", admin);
-        await js.InvokeVoidAsync("alert", $"Updated admin {admin.FirstName} {admin.LastName} Successfully!");
+        await js.InvokeVoidAsync("alert", $"Admin {admin.FirstName} {admin.LastName} Uppdaterades perfekt!");
         uriHelper.NavigateTo("admin");
     }
 }
