--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/Edit.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/Edit.razor
@@ -15,7 +15,7 @@
     async Task EditCustomer()
     {
         await http.PutAsJsonAsync("https://localhost:44374/api/customers", customer);
-        await js.InvokeVoidAsync("alert", $"Updated {customer.Name} With ID: {customer.Id} Successfully!");
+        await js.InvokeVoidAsync("alert", $"Företagskund {customer.Company} med ID: {customer.Id} uppdaterades perfekt!");
         uriHelper.NavigateTo("customerlist");
     }
 }
