--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/Form.razor
@@ -1,21 +1,22 @@
-﻿<EditForm Model="@customer" OnValidSubmit="@OnValidSubmit">
+﻿@inject NavigationManager uriHelper
+<EditForm Model="@customer" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator />
     <div class="form-group">
-        <label>Name :</label>
+        <label>Namn på Företag :</label>
+        <div>
+            <InputText @bind-Value="@customer.Company" />
+            <ValidationMessage For="@(() => customer.Company)" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Kontaktperson :</label>
         <div>
             <InputText @bind-Value="@customer.Name" />
             <ValidationMessage For="@(() => customer.Name)" />
         </div>
     </div>
     <div class="form-group">
-        <label>Email :</label>
-        <div>
-            <InputText @bind-Value="@customer.Email" />
-            <ValidationMessage For="@(() => customer.Email)" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label>PhoneNumber :</label>
+        <label>Telefonnummer :</label>
         <div>
             <InputText @bind-Value="@customer.Phone" />
             <ValidationMessage For="@(() => customer.Phone)" />
@@ -23,16 +24,16 @@
     </div>
     <div class="form-group ">
         <div>
-            <label>Company Name :</label>
+            <label>Epost :</label>
             <div>
-                <InputText @bind-Value="@customer.Company" />
-                <ValidationMessage For="@(() => customer.Company)" />
+                <InputText @bind-Value="@customer.Email" />
+                <ValidationMessage For="@(() => customer.Email)" />
             </div>
         </div>
     </div>
     <div class="form-group ">
         <div>
-            <label>Street :</label>
+            <label>FöretagsAddress :</label>
             <div>
                 <InputText @bind-Value="@customer.Street" />
                 <ValidationMessage For="@(() => customer.Street)" />
@@ -42,7 +43,7 @@
 
     <div class="form-group ">
         <div>
-            <label>PostalCode :</label>
+            <label>PostNummer :</label>
             <div>
                 <InputText @bind-Value="@customer.PostalCode" />
                 <ValidationMessage For="@(() => customer.PostalCode)" />
@@ -52,7 +53,7 @@
 
     <div class="form-group ">
         <div>
-            <label>City :</label>
+            <label>Stad :</label>
             <div>
                 <InputText @bind-Value="@customer.City" />
                 <ValidationMessage For="@(() => customer.City)" />
@@ -64,12 +65,19 @@
     <button type="submit" class="btn btn-success">
         @ButtonText
     </button>
-
+    <button class="btn btn-dark" @onclick="@GetBackOnePage">Ångra</button>
 </EditForm>
 
 
 @code {
     [Parameter] public Customers customer { get; set; }
-    [Parameter] public string ButtonText { get; set; } = "Save";
+    [Parameter] public string ButtonText { get; set; } = "Spara";
     [Parameter] public EventCallback OnValidSubmit { get; set; }
+
+
+    public void GetBackOnePage()
+    {
+        uriHelper.NavigateTo("customerlist");
+    }
 }
+
