--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/View.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/View.razor
@@ -5,19 +5,19 @@
 
 
 <table id="customers" class="table table-bordered table-danger">
-    <tr id="testing"><th>Information about Company @_customer.Company</th></tr>
+    <tr id="testing"></tr>
     <tr><th>Företag: @_customer.Company</th></tr>
     <tr><th>Address: @_customer.Street</th></tr>
     <tr><th>Stad: @_customer.City</th></tr>
-    <tr><th>Email: @_customer.Email</th></tr>
+    <tr><th>Epost: @_customer.Email</th></tr>
     <tr><th>Telefon: @_customer.Phone</th></tr>
 
 </table>
 
 <div class="BackButton">
-    <button class="btn btn-dark" @onclick="@GetBackOnePage">Back to customer page</button>
+    <button class="btn btn-dark" @onclick="@GetBackOnePage">Tillbaks till företagskunder</button>
     <a class="btn btn-success" href="customer/edit/@_customer.Id">Edit</a>
-    <button class="btn btn-danger" @onclick="@(() => Delete(_customer.Id))">Delete</button>
+    <button class="btn btn-danger" @onclick="@(() => Delete(_customer.Id))">Ta bort @_customer.Company</button>
 
 </div>
 
@@ -38,7 +38,7 @@
 
     async Task Delete(int id)
     {
-        if (await js.InvokeAsync<bool>("confirm", $"Do you want to delete {_customer.Company}'s with ID: ({_customer.Id}) Record?"))
+        if (await js.InvokeAsync<bool>("confirm", $"Vill du ta bort {_customer.Company}'s med ID: ({_customer.Id}) som kund?"))
         {
             await client.DeleteAsync($"https://localhost:44374/api/customers/ {id}");
             GetBackOnePage();
