--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/Form.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/Form.razor
@@ -1,38 +1,39 @@
-﻿<EditForm Model="@o" OnValidSubmit="@OnValidSubmit">
+﻿@inject NavigationManager uriHelper
+<EditForm Model="@o" OnValidSubmit="@OnValidSubmit">
     <DataAnnotationsValidator />
     <div class="form-group">
-        <label>UserName :</label>
-        <div>
-            <InputText @bind-Value="@o.UserName" />
-            <ValidationMessage For="@(() => o.UserName)" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label>Password :</label>
-        <div>
-            <InputText @bind-Value="@o.Password" />
-            <ValidationMessage For="@(() => o.Password)" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label>FirstName :</label>
+        <label>Förnamn :</label>
         <div>
             <InputText @bind-Value="@o.FirstName" />
             <ValidationMessage For="@(() => o.FirstName)" />
         </div>
     </div>
+    <div class="form-group">
+        <label>Efternamn :</label>
+        <div>
+            <InputText @bind-Value="@o.LastName" />
+            <ValidationMessage For="@(() => o.LastName)" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Användarnamn :</label>
+        <div>
+            <InputText @bind-Value="@o.UserName" />
+            <ValidationMessage For="@(() => o.UserName)" />
+        </div>
+    </div>
     <div class="form-group ">
         <div>
-            <label>Last :</label>
+            <label>Lösenord :</label>
             <div>
-                <InputText @bind-Value="@o.LastName" />
-                <ValidationMessage For="@(() => o.LastName)" />
+                <InputText @bind-Value="@o.Password" />
+                <ValidationMessage For="@(() => o.Password)" />
             </div>
         </div>
     </div>
     <div class="form-group ">
         <div>
-            <label>Email :</label>
+            <label>Epost :</label>
             <div>
                 <InputText @bind-Value="@o.Email" />
                 <ValidationMessage For="@(() => o.Email)" />
@@ -42,7 +43,7 @@
 
     <div class="form-group ">
         <div>
-            <label>Phone :</label>
+            <label>Telefonnummer :</label>
             <div>
                 <InputText @bind-Value="@o.Phone" />
                 <ValidationMessage For="@(() => o.Phone)" />
@@ -52,7 +53,7 @@
 
     <div class="form-group ">
         <div>
-            <label>Location :</label>
+            <label>Stad operatör befinner sig just nu :</label>
             <div>
                 <InputText @bind-Value="@o.Location" />
                 <ValidationMessage For="@(() => o.Location)" />
@@ -63,12 +64,19 @@
     <button type="submit" class="btn btn-success">
         @ButtonText
     </button>
-
+    <button class="btn btn-dark" @onclick="@GetBackOnePage">Ångra</button>
 </EditForm>
 
 
 @code {
     [Parameter] public Operators o { get; set; }
-    [Parameter] public string ButtonText { get; set; } = "Save";
+    [Parameter] public string ButtonText { get; set; } = "Spara";
     [Parameter] public EventCallback OnValidSubmit { get; set; }
+
+
+    public void GetBackOnePage()
+    {
+        uriHelper.NavigateTo("operatorlist");
+    }
+
 }
