--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Create.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/New/Create.razor
@@ -6,7 +6,7 @@
 
 <h3>Create</h3>
 
-<Form ButtonText="Create Order" order="@order"
+<Form ButtonText="Lägg till ny order" order="@order"
       OnValidSubmit="@CreateOrder" />
 
 @code {
@@ -15,7 +15,7 @@
     {
         
         await http.PostAsJsonAsync("https://localhost:44374/api/orders", order);
-        await js.InvokeVoidAsync("alert", $"Created order Successfully!");
+        await js.InvokeVoidAsync("alert", $"Grymt jobbat! Ny Arbetsorder skapad!");
         uriHelper.NavigateTo("activeorders");
     }
 }
