--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">MAAD</a>
+    <a class="navbar-brand" href="">MAAD TechController</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,12 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="operatorlist">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Operators
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Operatörer
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="customerlist">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Företagskunder
             </NavLink>
         </li>      
 
@@ -38,17 +38,17 @@
                 <ul class="nav flex-column">
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="order/create">
-                            <span class="oi oi-plus" aria-hidden="true"></span> Create Order
+                            <span class="oi oi-plus" aria-hidden="true"></span> Skapa en Order
                         </NavLink>
                     </li>
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="activeorders">
-                            <span class="oi oi-arrow-right" aria-hidden="true"></span> Active Orders
+                            <span class="oi oi-globe" aria-hidden="true"></span> Aktiva Orders
                         </NavLink>
                     </li>
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="ordershistory">
-                            <span class="oi oi-british-pound" aria-hidden="true"></span> Skicka Faktura
+                            <span class="oi oi-euro" aria-hidden="true"></span> Skicka Faktura
                         </NavLink>
                     </li>
                 </ul>
@@ -63,7 +63,6 @@
 @code {
     private bool collapseNavMenu = true;
     private bool expandSubMenu;
-    private bool expandSubMenuTwo;
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
