--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Active/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Order/Active/FetchData.razor
@@ -12,7 +12,7 @@
 {
     <text>Loading...</text>
 }
-else if (activeOrderView.Length == 0)
+else if (activeOrderView.Count == 0)
 {
     <text>No Records Found.</text>
 }
@@ -40,7 +40,9 @@ else
                 <td>@order.OrderInfo</td>
                 <td>@order.Customer</td>
                 <td></td>
-                
+                <td>
+
+                </td>
             </tr>
                 }
 
@@ -51,11 +53,11 @@ else
 }
 @code {
 
-    ActiveOrderView[] activeOrderView { get; set; }
-   
+    List<ActiveOrderView> activeOrderView { get; set; } = new List<ActiveOrderView>();
+
     protected override async Task OnInitializedAsync()
     {
-        activeOrderView = await client.GetFromJsonAsync<ActiveOrderView[]>("https://localhost:44374/api/activeorderview");
+        activeOrderView = await client.GetFromJsonAsync<List<ActiveOrderView>>("https://webapitodo20200919020315.azurewebsites.net/api/activeorderview");
 
     }
 
