added first page

--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Customer/FetchData.razor
@@ -11,11 +11,11 @@
 
 @if (customers == null)
 {
-    <text>Loading...</text>
+    <div class="spinner"></div>
 }
 else if (customers.Count == 0)
 {
-    <text>No Records Found.</text>
+    <div class="spinner"></div>
 }
 else
 {
