--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/FetchData.razor
@@ -10,11 +10,11 @@
 
 @if (techOp == null)
 {
-    <text>Loading...</text>
+    <div class="spinner"></div>
 }
 else if (techOp.Count == 0)
 {
-    <text>No Records Found.</text>
+    <div class="spinner"></div>
 }
 else
 {
