--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Login/Login.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Login/Login.razor
@@ -1,6 +1,114 @@
-﻿@inherits LayoutComponentBase
+﻿@page "/"
+@inject HttpClient client
+@inject NavigationManager uriHelper
+<!DOCTYPE html>
 
-    <div class="col-12">
-        <br /> <br />
-        @Body
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+    body, h1, h2, h3, h4, h5 {
+        font-family: "Raleway", sans-serif
+    }
+</style>
+<html>
+<body class="w3-light-grey">
+
+    <!-- w3-content defines a container for fixed size centered content,
+    and is wrapped around the whole page content, except for the footer in this example -->
+    <div class="w3-content" style="max-width:1400px">
+
+        <!-- Header -->
+        <header class="w3-container w3-center w3-padding-32">
+            <h1><b>M A A D  TechController</b></h1>
+            <p> <span class="w3-tag">- Välkommen till oss på MAAD TechController -</span></p>
+        </header>
+
+        <!-- Grid -->
+        <div class="w3-row">
+
+            <!-- Blog entries -->
+            <div class="w3-col l8 s12">
+                <!-- Blog entry -->
+                <div class="w3-card-4 w3-margin w3-white">
+                    <div class="w3-container">
+                        <h3><b>Aktiva ordrar</b></h3>
+                        <h5>Glöm inte att skicka faktura till fakturor som är helt klara <span class="w3-opacity">@DagensDatum.ToString("MM/dd/yyyy")</span></h5>
+                    </div>
+
+                    <div class="w3-container">
+                        <p>
+
+                        </p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><button class="w3-button w3-padding-large w3-white w3-border" @onclick="GetBackOnePage"><b>Till Fakturabetalning »</b></button></p>
+                            </div>
+                            <div class="w3-col m4 w3-hide-small">
+                                <p><span class="w3-padding-large w3-right"><b>Antal Aktiva orders:  </b> <span class="w3-tag">@activeOrderView.Count</span></span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+
+            </div>
+
+            <!-- Introduction menu -->
+            <div class="w3-col col-lg-3">
+                <!-- About Card -->
+                <div class="w3-card w3-margin w3-margin-top">
+                    <div class="w3-container w3-white">
+                        <button class="w3-button w3-padding-large w3-white" @onclick="SkapaKund"><b>Skapa Kund »</b></button>
+
+                    </div>
+                </div><hr>
+
+                <!-- END Introduction Menu -->
+            </div>
+            <div class="w3-col col-lg-3">
+                <!-- About Card -->
+                <div class="w3-card w3-margin w3-margin-top">
+                    <div class="w3-container w3-white">
+                        <button class="w3-button w3-padding-large w3-white" @onclick="SkapaOrder"><b>Skapa Order »</b></button>
+
+                    </div>
+                </div><hr>
+
+                <!-- END Introduction Menu -->
+            </div>
+
+            <!-- END GRID -->
+        </div><br>
+
+        <!-- END w3-content -->
     </div>
+
+</body>
+</html>
+
+@code{
+
+    public DateTime DagensDatum { get; set; } = DateTime.Now;
+    public List<ActiveOrderView> activeOrderView { get; set; } = new List<ActiveOrderView>();
+
+    protected async override Task OnInitializedAsync()
+    {
+        activeOrderView = await client.GetFromJsonAsync<List<ActiveOrderView>>("https://webapitodo20200919020315.azurewebsites.net/api/activeorderview");
+    }
+    public void GetBackOnePage()
+    {
+        uriHelper.NavigateTo("ordershistory");
+    }
+
+    public void SkapaKund()
+    {
+        uriHelper.NavigateTo("/customer/create");
+    }
+
+    public void SkapaOrder()
+    {
+        uriHelper.NavigateTo("/order/create/");
+    }
+}
