--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Login/Login.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Login/Login.razor
@@ -12,81 +12,91 @@
         font-family: "Raleway", sans-serif
     }
 </style>
-<html>
-<body class="w3-light-grey">
+@if (activeOrderView == null)
+{
+    <div class="spinner"></div>
+}
+else
+{
+    <html>
 
-    <!-- w3-content defines a container for fixed size centered content,
-    and is wrapped around the whole page content, except for the footer in this example -->
-    <div class="w3-content" style="max-width:1400px">
 
-        <!-- Header -->
-        <header class="w3-container w3-center w3-padding-32">
-            <h1><b>M A A D  TechController</b></h1>
-            <p> <span class="w3-tag">- Välkommen till oss på MAAD TechController -</span></p>
-        </header>
+    <body class="w3-light-grey">
 
-        <!-- Grid -->
-        <div class="w3-row">
+        <!-- w3-content defines a container for fixed size centered content,
+        and is wrapped around the whole page content, except for the footer in this example -->
+        <div class="w3-content" style="max-width:1400px">
 
-            <!-- Blog entries -->
-            <div class="w3-col l8 s12">
-                <!-- Blog entry -->
-                <div class="w3-card-4 w3-margin w3-white">
-                    <div class="w3-container">
-                        <h3><b>Aktiva ordrar</b></h3>
-                        <h5>Glöm inte att skicka faktura till fakturor som är helt klara <span class="w3-opacity">@DagensDatum.ToString("MM/dd/yyyy")</span></h5>
-                    </div>
+            <!-- Header -->
+            <header class="w3-container w3-center w3-padding-32">
+                <h1><b>M A A D  TechController</b></h1>
+                <p> <span class="w3-tag">- Välkommen till oss på MAAD TechController -</span></p>
+            </header>
 
-                    <div class="w3-container">
-                        <p>
+            <!-- Grid -->
+            <div class="w3-row">
 
-                        </p>
-                        <div class="w3-row">
-                            <div class="w3-col m8 s12">
-                                <p><button class="w3-button w3-padding-large w3-white w3-border" @onclick="GetBackOnePage"><b>Till Fakturabetalning »</b></button></p>
-                            </div>
-                            <div class="w3-col m4 w3-hide-small">
-                                <p><span class="w3-padding-large w3-right"><b>Antal Aktiva orders:  </b> <span class="w3-tag">@activeOrderView.Count</span></span></p>
+                <!-- Blog entries -->
+                <div class="w3-col l8 s12">
+                    <!-- Blog entry -->
+                    <div class="w3-card-4 w3-margin w3-white">
+                        <div class="w3-container">
+                            <h3><b>Aktiva ordrar</b></h3>
+                            <h5>Glöm inte att skicka faktura till fakturor som är helt klara <span class="w3-opacity">@DagensDatum.ToString("MM/dd/yyyy")</span></h5>
+                        </div>
+
+                        <div class="w3-container">
+                            <p>
+
+                            </p>
+                            <div class="w3-row">
+                                <div class="w3-col m8 s12">
+                                    <p><button class="w3-button w3-padding-large w3-white w3-border" @onclick="GetBackOnePage"><b>Till Fakturabetalning »</b></button></p>
+                                </div>
+                                <div class="w3-col m4 w3-hide-small">
+                                    <p><span class="w3-padding-large w3-right"><b>Antal Aktiva orders:  </b> <span class="w3-tag">@activeOrderView.Count</span></span></p>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <hr>
+
                 </div>
-                <hr>
 
-            </div>
+                <!-- Introduction menu -->
+                <div class="w3-col col-lg-3">
+                    <!-- About Card -->
+                    <div class="w3-card w3-margin w3-margin-top">
+                        <div class="w3-container w3-white">
+                            <button class="w3-button w3-padding-large w3-white" @onclick="SkapaKund"><b>Skapa Kund »</b></button>
 
-            <!-- Introduction menu -->
-            <div class="w3-col col-lg-3">
-                <!-- About Card -->
-                <div class="w3-card w3-margin w3-margin-top">
-                    <div class="w3-container w3-white">
-                        <button class="w3-button w3-padding-large w3-white" @onclick="SkapaKund"><b>Skapa Kund »</b></button>
+                        </div>
+                    </div><hr>
 
-                    </div>
-                </div><hr>
+                    <!-- END Introduction Menu -->
+                </div>
+                <div class="w3-col col-lg-3">
+                    <!-- About Card -->
+                    <div class="w3-card w3-margin w3-margin-top">
+                        <div class="w3-container w3-white">
+                            <button class="w3-button w3-padding-large w3-white" @onclick="SkapaOrder"><b>Skapa Order »</b></button>
 
-                <!-- END Introduction Menu -->
-            </div>
-            <div class="w3-col col-lg-3">
-                <!-- About Card -->
-                <div class="w3-card w3-margin w3-margin-top">
-                    <div class="w3-container w3-white">
-                        <button class="w3-button w3-padding-large w3-white" @onclick="SkapaOrder"><b>Skapa Order »</b></button>
+                        </div>
+                    </div><hr>
 
-                    </div>
-                </div><hr>
+                    <!-- END Introduction Menu -->
+                </div>
 
-                <!-- END Introduction Menu -->
-            </div>
+                <!-- END GRID -->
+            </div><br>
 
-            <!-- END GRID -->
-        </div><br>
+            <!-- END w3-content -->
+        </div>
 
-        <!-- END w3-content -->
-    </div>
-
-</body>
+    </body>
 </html>
+}
+
 
 @code{
 
